--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
+    "swiper": "6.8.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
