--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
+    "firebase": "^9.4.0",
     "react": "^17.0.2",
     "react-confirm-alert": "^2.7.0",
     "react-countup": "^6.1.0",
