--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-confirm-alert": "^2.7.0",
     "react-countup": "^6.1.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "7.18.0",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
