--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@fontsource/roboto": "^4.5.1",
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
+    "@stripe/react-stripe-js": "^1.6.0",
+    "@stripe/stripe-js": "^1.21.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
