--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "vite --port 3000",
     "build": "vite build",
     "preview": "vite preview",
+    "lint": "eslint --ext .js,.jsx --ignore-path .gitignore .",
     "test": "vitest",
     "test:coverage": "vitest run --coverage --watch=false"
   },
@@ -58,7 +59,13 @@
   },
   "devDependencies": {
     "@vitest/coverage-v8": "^0.34.6",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-refresh": "^0.4.4",
     "jsdom": "^22.1.0",
+    "prettier": "^3.1.0",
     "vitest": "^0.34.6"
   }
 }
