--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@reduxjs/toolkit": "^1.9.7",
     "@stripe/react-stripe-js": "^2.3.2",
     "@stripe/stripe-js": "^2.1.11",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -32,6 +33,7 @@
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.48.2",
+    "react-redux": "^8.1.3",
     "react-router-dom": "6.19.0",
     "react-toastify": "^9.1.3",
     "swiper": "11.0.4",
