--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "6.19.0",
     "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
     "swiper": "11.0.4",
     "vite": "^5.0.0",
     "vite-plugin-svgr": "^4.2.0",
