demo admin login

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ VITE_FIREBASE_APP_ID=1:1234567444890:web:12345675458901s4
 VITE_STRIPE_KEY=pk_test_1234567890
 VITE_CLOUDINARY_URL=https://api.cloudinary.com/v1_1/yourcloudname/image/upload
 VITE_CLOUDINARY_UPLOAD_PRESET=yourpreset
+VITE_DEMO_ADMIN_EMAIL=name@domain.com
+VITE_DEMO_ADMIN_PASSWORD=password
