--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-confirm-alert": "^3.0.6",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "7.48.2",
     "react-redux": "^8.1.3",
     "react-router-dom": "6.19.0",
