--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/oswald": "^5.0.17",
     "@fontsource/roboto": "^5.0.8",
+    "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@reduxjs/toolkit": "^1.9.7",
@@ -41,7 +42,8 @@
     "swiper": "11.0.4",
     "vite": "^5.0.0",
     "vite-plugin-svgr": "^4.2.0",
-    "web-vitals": "^3.5.0"
+    "web-vitals": "^3.5.0",
+    "yup": "^1.3.2"
   },
   "eslintConfig": {
     "extends": [
